Changelog
=========

1.4.1 (unreleased)
------------------

- Nothing changed yet.


1.4.0 (2017-12-08)
------------------

- Generate filebeat prospector configs for ftw.structlog and
  ftw.contentstats logs.
  [lgraf]

- Respect current umask when making scripts executable.
  [buchi]


1.3.0 (2017-09-11)
------------------

- Generate logrotate config for ftw.structlog's logfiles.
  [lgraf]


1.2.0 (2016-02-10)
------------------

- Let ``bin/packall`` log on success to ``var/log/pack.log``.
  [jone]

- Add option to create startup and shutdown scripts in a global
  directory instead of run-control scripts.
  [buchi]

- Create packall script for packing of all storages.
  [buchi]

- Fix handling of logrotate options in buildout 2.x by no longer dropping the
  first option.
  [buchi]


1.1.1 (2014-01-21)
------------------

- Make postrotate command fail silently if pid file is missing.
  [buchi]


1.1 (2013-03-05)
----------------

- Added option to specify the user under which run-control scripts start
  processes.
  [buchi]

- Added status command to supervisor run-control script.
  [buchi]


1.0.1 (2012-03-12)
------------------

- Fixed handling of logrotate options containing whitespaces.
  [buchi]


1.0 (2012-03-12)
----------------

- Initial release.
  [buchi]